Stop category icon wrapper from clipping image edges

--- a/salesforce commerce cloud/walmart/cartridge/client/scss/homePage.scss
+++ b/salesforce commerce cloud/walmart/cartridge/client/scss/homePage.scss
@@ -420,18 +420,20 @@ input,
   }
 
   .feature-box {
+    --icon-wrap-height: 184px;
+    --icon-size: 132px;
     min-height: 220px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-decoration: none;
 
-    &.box-b1 { grid-column: 1; grid-row: 1 / 3; min-height: 300px; }
-    &.box-b2 { grid-column: 2 / 4; grid-row: 2; min-height: 260px; }
-    &.box-b3 { grid-column: 4; grid-row: 1 / 3; min-height: 300px; }
-    &.box-b4 { grid-column: 1; grid-row: 3; }
-    &.box-b5 { grid-column: 2 / 4; grid-row: 3; }
-    &.box-b6 { grid-column: 4; grid-row: 3; }
+    &.box-b1 { grid-column: 1; grid-row: 1 / 3; min-height: 300px; --icon-wrap-height: 230px; --icon-size: 168px; }
+    &.box-b2 { grid-column: 2 / 4; grid-row: 2; min-height: 260px; --icon-wrap-height: 208px; --icon-size: 152px; }
+    &.box-b3 { grid-column: 4; grid-row: 1 / 3; min-height: 300px; --icon-wrap-height: 230px; --icon-size: 168px; }
+    &.box-b4 { grid-column: 1; grid-row: 3; --icon-wrap-height: 180px; --icon-size: 128px; }
+    &.box-b5 { grid-column: 2 / 4; grid-row: 3; --icon-wrap-height: 198px; --icon-size: 144px; }
+    &.box-b6 { grid-column: 4; grid-row: 3; --icon-wrap-height: 180px; --icon-size: 128px; }
   }
 
   .category-card__icon-wrap {
@@ -439,11 +441,11 @@ input,
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 160px;
+    height: var(--icon-wrap-height, 184px);
     margin-bottom: 12px;
     position: relative;
     perspective: 1100px;
-    overflow: hidden;
+    overflow: visible;
 
     &::after {
       content: '';
@@ -460,8 +462,8 @@ input,
   }
 
   .category-card__icon {
-    width: min(100%, 112px);
-    height: min(100%, 112px);
+    width: min(100%, var(--icon-size, 132px));
+    height: min(100%, var(--icon-size, 132px));
     object-fit: contain;
     display: block;
     transform: rotateY(-10deg) rotateX(6deg);
